[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://bouncy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dirt/bg/Ausaridbg.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 48, 208 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 48, 208 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 40, 176 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 40, 184 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 40, 400 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 64, 200 )

[node name="Tutorial" type="Node"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -65495, 6, 0, -65494, 4, 0, -65493, 4, 0, -65492, 4, 0, -65483, 4, 0, -65482, 4, 0, -65481, 4, 0, 1, 3, 0, 2, 3, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 65537, 3, 0, 65538, 3, 0, 65564, 4, 0, 65565, 9, 0, 65566, 4, 0, 65577, 3, 0, 65578, 3, 0, 65579, 3, 0, 65580, 3, 0, 65589, 3, 0, 65590, 3, 0, 65591, 3, 0, 131073, 3, 0, 131074, 3, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131113, 3, 0, 131114, 3, 0, 131115, 3, 0, 131116, 3, 0, 131125, 3, 0, 131126, 3, 0, 131127, 3, 0, 196609, 3, 0, 196610, 3, 0, 196623, 4, 0, 196624, 7, 0, 196636, 3, 0, 196637, 3, 0, 196638, 3, 0, 196649, 3, 0, 196650, 3, 0, 196651, 3, 0, 196652, 3, 0, 196661, 3, 0, 196662, 3, 0, 196663, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 5, 0, 262148, 4, 0, 262149, 5, 0, 262150, 5, 0, 262151, 4, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 4, 0, 262157, 5, 0, 262158, 5, 0, 262159, 0, 0, 262160, 0, 0, 262161, 8, 0, 262162, 8, 0, 262163, 6, 0, 262164, 8, 0, 262165, 8, 0, 262166, 8, 0, 262167, 9, 0, 262168, 8, 0, 262169, 8, 0, 262170, 7, 0, 262171, 8, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 5, 0, 262176, 8, 0, 262177, 8, 0, 262178, 7, 0, 262179, 5, 0, 262180, 8, 0, 262181, 8, 0, 262182, 5, 0, 262183, 5, 0, 262184, 9, 0, 262185, 4, 0, 262186, 5, 0, 262187, 5, 0, 262188, 8, 0, 262189, 5, 0, 262190, 5, 0, 262191, 7, 0, 262192, 5, 0, 262193, 8, 0, 262194, 5, 0, 262195, 5, 0, 262197, 3, 0, 262198, 3, 0, 262199, 3, 0, 262200, 4, 0, 262201, 8, 0, 262202, 5, 0, 262203, 5, 0, 262204, 5, 0, 262205, 5, 0, 262206, 5, 0, 262207, 9, 0, 262208, 8, 0, 262209, 5, 0, 262210, 5, 0, 262211, 7, 0, 262212, 5, 0, 262213, 4, 0, 262214, 5, 0, 262215, 5, 0, 262216, 6, 0, 262217, 5, 0, 262218, 5, 0, 262219, 4, 0, 262220, 4, 0, 262221, 5, 0, 262222, 5, 0, 327681, 3, 0, 327682, 3, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 3, 0, 327696, 3, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327718, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 327723, 0, 0, 327724, 0, 0, 327725, 0, 0, 327726, 0, 0, 327727, 0, 0, 327728, 0, 0, 327729, 0, 0, 327730, 0, 0, 327731, 0, 0, 327733, 3, 0, 327734, 3, 0, 327735, 3, 0, 327736, 0, 0, 327737, 0, 0, 327738, 0, 0, 327739, 0, 0, 327740, 0, 0, 327741, 0, 0, 327742, 0, 0, 327743, 0, 0, 327744, 0, 0, 327745, 0, 0, 327746, 0, 0, 327747, 0, 0, 327748, 0, 0, 327749, 0, 0, 327750, 0, 0, 327751, 0, 0, 327752, 0, 0, 327753, 0, 0, 327754, 0, 0, 327755, 0, 0, 327756, 0, 0, 327757, 0, 0, 327758, 0, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 393248, 3, 0, 393249, 3, 0, 393250, 3, 0, 393251, 3, 0, 393252, 3, 0, 393253, 3, 0, 393254, 3, 0, 393255, 3, 0, 393256, 3, 0, 393257, 3, 0, 393258, 3, 0, 393259, 3, 0, 393260, 3, 0, 393261, 3, 0, 393262, 3, 0, 393263, 3, 0, 393264, 3, 0, 393265, 3, 0, 393266, 3, 0, 393267, 3, 0, 393268, 3, 0, 393269, 3, 0, 393270, 3, 0, 393271, 3, 0, 393272, 3, 0, 393273, 3, 0, 393274, 3, 0, 393275, 3, 0, 393276, 3, 0, 393277, 3, 0, 393278, 3, 0, 393279, 3, 0, 393280, 3, 0, 393281, 3, 0, 393282, 3, 0, 393283, 3, 0, 393284, 3, 0, 393285, 3, 0, 393286, 3, 0, 393287, 3, 0, 393288, 3, 0, 393289, 3, 0, 393290, 3, 0, 393291, 3, 0, 393292, 3, 0, 393293, 3, 0, 393294, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 458784, 3, 0, 458785, 3, 0, 458786, 3, 0, 458787, 3, 0, 458788, 3, 0, 458789, 3, 0, 458790, 3, 0, 458791, 3, 0, 458792, 3, 0, 458793, 3, 0, 458794, 3, 0, 458795, 3, 0, 458796, 3, 0, 458797, 3, 0, 458798, 3, 0, 458799, 3, 0, 458800, 3, 0, 458801, 3, 0, 458802, 3, 0, 458803, 3, 0, 458804, 3, 0, 458805, 3, 0, 458806, 3, 0, 458807, 3, 0, 458808, 3, 0, 458809, 3, 0, 458810, 3, 0, 458811, 3, 0, 458812, 3, 0, 458813, 3, 0, 458814, 3, 0, 458815, 3, 0, 458816, 3, 0, 458817, 3, 0, 458818, 3, 0, 458819, 3, 0, 458820, 3, 0, 458821, 3, 0, 458822, 3, 0, 458823, 3, 0, 458824, 3, 0, 458825, 3, 0, 458826, 3, 0, 458827, 3, 0, 458828, 3, 0, 458829, 3, 0, 458830, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 524320, 3, 0, 524321, 3, 0, 524322, 3, 0, 524323, 3, 0, 524324, 3, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 3, 0, 524329, 3, 0, 524330, 3, 0, 524331, 3, 0, 524332, 3, 0, 524333, 3, 0, 524334, 3, 0, 524335, 3, 0, 524336, 3, 0, 524337, 3, 0, 524338, 3, 0, 524339, 3, 0, 524340, 3, 0, 524341, 3, 0, 524342, 3, 0, 524343, 3, 0, 524344, 3, 0, 524345, 3, 0, 524346, 3, 0, 524347, 3, 0, 524348, 3, 0, 524349, 3, 0, 524350, 3, 0, 524351, 3, 0, 524352, 3, 0, 524353, 3, 0, 524354, 3, 0, 524355, 3, 0, 524356, 3, 0, 524357, 3, 0, 524358, 3, 0, 524359, 3, 0, 524360, 3, 0, 524361, 3, 0, 524362, 3, 0, 524363, 3, 0, 524364, 3, 0, 524365, 3, 0, 524366, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

[node name="Tutorial GUI" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Label" type="Label" parent="Tutorial GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 328.0
margin_top = 144.0
margin_right = 479.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Trigger1" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 840, 280 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger1" index="0"]

position = Vector2( -128, -176 )
shape = SubResource( 1 )

[node name="Trigger2" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 1296, 104 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger2" index="0"]

shape = SubResource( 2 )

[node name="Trigger3" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 2352, 136 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger3" index="0"]

shape = SubResource( 3 )

[node name="Trigger4" type="Area2D" parent="." index="6"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger4" index="0"]

position = Vector2( 3056, 128 )
shape = SubResource( 4 )

[node name="Trigger5" type="Area2D" parent="." index="7"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger5" index="0"]

position = Vector2( 3848, -88 )
shape = SubResource( 5 )

[node name="Sprite" parent="." index="8" instance=ExtResource( 4 )]

position = Vector2( 3360, 352 )

[node name="Meta" type="Area2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 4768, 192 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="Meta texto" type="Label" parent="Meta" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -56.0
margin_top = -16.0
margin_right = -16.0
margin_bottom = -2.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "META"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meta" index="1"]

position = Vector2( 0, -80 )
shape = SubResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="10"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

position = Vector2( 236, 472 )
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 640, 768 )
_sections_unfolded = [ "Motion" ]
__meta__ = {
"_edit_group_": true
}

[node name="bg" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[connection signal="body_entered" from="Trigger1" to="." method="_on_Trigger1_body_entered"]

[connection signal="body_entered" from="Trigger2" to="." method="_on_Trigger2_body_entered"]

[connection signal="body_entered" from="Trigger3" to="." method="_on_Trigger3_body_entered"]

[connection signal="body_entered" from="Trigger4" to="." method="_on_Trigger4_body_entered"]

[connection signal="body_entered" from="Trigger5" to="." method="_on_Trigger5_body_entered"]

[connection signal="body_entered" from="Meta" to="." method="_on_Meta_body_entered"]


